Added auto complete

--- a/src/app/demo-app/Bhaskar/bhaskar-components/bhaskar-components.component.html
+++ b/src/app/demo-app/Bhaskar/bhaskar-components/bhaskar-components.component.html
@@ -2,4 +2,5 @@
 <a href="dragdrop">Drag&Drop</a><br>
 <a href="chips">Chips</a><br>
 <a href="passwordStrength">Password</a><br>
+<a href="autocomplete">AutoComplete</a><br>
 <h4>TA...DA..!</h4>
