Added scroller and refactored container,autocomplete,grid

--- a/src/app/components/Bhaskar/container/container.component.css
+++ b/src/app/components/Bhaskar/container/container.component.css
@@ -1,13 +1,18 @@
+div.autocomplete-bar{
+	margin-top: 0.5em;
+	width:80%;
+	margin-left: 10%;
+}
+
 div.vsf-container{
 	width: 100%;
 }
 
-div.vsf-grid{
-}
+
 div.controls>div.filter-controls,
 div.controls>div.sort-controls
 {
-	display: inline	;
+	/* display: inline	; */
 }
 
 div.controls>div.filter-controls{
