--- a/src/app/demo-app/Bhaskar/container-demo/container-demo.component.html
+++ b/src/app/demo-app/Bhaskar/container-demo/container-demo.component.html
@@ -1,31 +1,20 @@
 <vsf-container
 	[dataList]="dataList"
+	columns="col-12"
 	[sortingProperties]='["prop1","prop2"]'
+	[searchingProperties]='["name"]'
+	(loadMore)="loadMoreData()"
 >
-	<div *ngFor="let data of dataList" class="col-2">
-		<div style="border-style:solid ;">
-			{{data.name}}<br>
-			{{data.prop1}}<br>
-			{{data.prop2}}<br>
-		</div>
-	</div>
+	<ng-template vsfTemplate="grid-item" let-item="item">
 
-	<!-- <div class="col-6"	style="background-color: red ;">
-		<h6>{{dataList[0].name}}</h6>
-		<h6>{{dataList[0].prop1}}</h6>
-		<h6>{{dataList[0].prop2}}</h6>
-	</div>
+			<div style="border-style:solid ;border-color: red;">
+				{{item.name}}<br>
+				{{item.prop1}}<br>
+				{{item.prop2}}<br>
+			</div>
 
-	<div class="col-6"	style="background-color: red ;">
-		<h6>{{dataList[1].name}}</h6>
-		<h6>{{dataList[1].prop1}}</h6>
-		<h6>{{dataList[1].prop2}}</h6>
-	</div>
 
-	<div class="col-6"	style="background-color: red ;">
-		<h6>{{dataList[2].name}}</h6>
-		<h6>{{dataList[2].prop1}}</h6>
-		<h6>{{dataList[2].prop2}}</h6>
-	</div> -->
+	</ng-template>
+
 
 </vsf-container>
