--- a/src/app/demo-app/Bhaskar/grid-demo/grid-demo.component.html
+++ b/src/app/demo-app/Bhaskar/grid-demo/grid-demo.component.html
@@ -1,8 +1,12 @@
-<vsf-grid>
-
-
-	<div class="col-6 col-md-6 " ><button >asd</button></div>
-	<div class="col-6 col-md-6 " ><button >asdddddddddddddddddddddddddddddddd</button></div>
-	<div class="col-6 col-md-3 " ><button style="width: 100%;">123</button></div>
-	<div class="col-6 col-md-3 " ><button style="width: 100%;" >456</button></div>
+<vsf-grid
+	[dataList]="dataList"
+	columns='col-6 col-md-3'
+>
+	<ng-template vsfTemplate="grid-item" let-item="item">
+		<div style="border-style:solid ;">
+			{{item.name}}<br>
+			{{item.prop1}}<br>
+			{{item.prop2}}<br>
+		</div>
+	</ng-template>
 </vsf-grid>
