Resolved src dependency errors for stackblitz

--- a/src/app/components/Bhaskar/molecules/button-group/button-group.component.html
+++ b/src/app/components/Bhaskar/molecules/button-group/button-group.component.html
@@ -9,9 +9,8 @@
 		>
 
 			<div *ngIf="!customTemplate" class="default-template">
-				<button
-					value={{button.toLocaleUpperCase()}}
-				>
+				<button>
+					{{button.toLocaleUpperCase()}}
 				</button>
 			</div>
 
