Added messages,modal,navbar atoms

--- a/src/app/demo-app/Bhaskar/bhaskar-components/bhaskar-components.component.html
+++ b/src/app/demo-app/Bhaskar/bhaskar-components/bhaskar-components.component.html
@@ -5,4 +5,7 @@
 <a href="autocomplete">AutoComplete</a><br>
 <a href="grid">Grid</a><br>
 <a href="container">Container</a><br>
+<a href="message">Toast</a><br>
+<a href="modal">Modal</a><br>
+<a href="navbar">Navbar</a><br>
 <h4>TA...DA..!</h4>
